Updated config so that instance system directory does not need to exist also update windows bat file to that it can be used per instance too.
git-svn-id: https://svn.apache.org/repos/asf/servicemix/smx4/runtime/trunk@602975 13f79535-47bb-0310-9956-ffa450edef68